# quotes

./: .gitignore  MANIFEST.in  README.md  setup.cfg
src/quotes/: __init__.py  quotes.txt
