[metadata]
name = quotes-NekointheShell
version = 1
author = neko
author_email = neko@127.0.0.1
description = Randomly produces a quote
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nekointheshell/quotes
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operationg System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True


[options.packages.find]
where = src
